@@ -35,6 +35,7 @@ int preconstruct_fifo(const conf_t *config);
 int init_database(conf_t *config);
 int check_trust_database(const char *path);
 void close_database(void);
+void database_report(FILE *f);
 void unlink_fifo(void);
 
 #endif
