@@ -4,7 +4,8 @@
 - Change the database to support duplicate keys
 - Provide a magic override file and use it during file inspection
 - Update rules to match new magic overrides
-- Add ftype command to fapolicyd-cli
+- Add --ftype command to fapolicyd-cli
+- Add database statistics to usage report
 
 0.9.2
 - Split codebase into daemon, library and cli
